Memperbaiki NOtifikasi dan menambahkan Dashboard